crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__agent_event_tool_call_delta_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 203
expression: roundtrip(&ev)
---
{
  "type": "tool_call_delta",
  "call_id": "call_1",
  "name": "calc",
  "args_delta": "{\"x\":"
}
