crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__agent_event_tool_call_item_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 228
expression: roundtrip(&ev)
---
{
  "type": "tool_call_item",
  "item": {
    "type": "tool_call",
    "call_id": "call_1",
    "name": "calc",
    "args": {
      "expr": "1+1"
    }
  }
}
