crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__agent_event_turn_started_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 179
expression: roundtrip(&ev)
---
{
  "type": "turn_started",
  "turn": 1
}
