crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__content_part_audio_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 94
expression: roundtrip(&part)
---
{
  "type": "audio",
  "source": {
    "type": "base64",
    "mime_type": "audio/wav",
    "data": "UklGRg=="
  }
}
