crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__content_part_image_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 83
expression: roundtrip(&part)
---
{
  "type": "image",
  "source": {
    "type": "url",
    "url": "https://example.com/cat.png"
  }
}
