crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__content_part_reasoning_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 119
expression: roundtrip(&part)
---
{
  "type": "reasoning",
  "text": "considering..."
}
