crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__content_part_text_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 75
expression: roundtrip(&part)
---
{
  "type": "text",
  "text": "hi"
}
