crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__content_part_tool_result_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 113
expression: roundtrip(&part)
---
{
  "type": "tool_result",
  "call_id": "call_xyz",
  "content": [
    {
      "type": "text",
      "text": "result"
    }
  ]
}
