crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__item_assistant_message_no_agent_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 57
expression: roundtrip(&item)
---
{
  "type": "assistant_message",
  "content": [
    {
      "type": "text",
      "text": "anonymous reply"
    }
  ]
}
